exports[`Default`] = `
<video
  className=""
  controls={true}
  height={undefined}
  width={undefined}>
  <source
    src="https://buffer-media-uploads.s3.amazonaws.com/52bc7a190a0e32ec4c000020/57bf2d1c6896977343f80535/output/87be589cc006a816411e8799ad3e67d9.original.mp4"
    type="video/mp4" />
  \"Your Browser Does Not Support Video\"
</video>
`;

exports[`No Controls`] = `
<video
  className=""
  controls={false}
  height={undefined}
  width={undefined}>
  <source
    src="https://buffer-media-uploads.s3.amazonaws.com/52bc7a190a0e32ec4c000020/57bf2d1c6896977343f80535/output/87be589cc006a816411e8799ad3e67d9.original.mp4"
    type="video/mp4" />
  \"Your Browser Does Not Support Video\"
</video>
`;

exports[`No Video`] = `
<video
  className=""
  controls={true}
  height={undefined}
  width={undefined}>
  \"Your Browser Does Not Support Video\"
</video>
`;

exports[`W=100%`] = `
<video
  className=""
  controls={true}
  height={undefined}
  width="100%">
  <source
    src="https://buffer-media-uploads.s3.amazonaws.com/52bc7a190a0e32ec4c000020/57bf2d1c6896977343f80535/output/87be589cc006a816411e8799ad3e67d9.original.mp4"
    type="video/mp4" />
  \"Your Browser Does Not Support Video\"
</video>
`;

exports[`W=200px H=100px`] = `
<video
  className=""
  controls={true}
  height="100px"
  width="200px">
  <source
    src="https://buffer-media-uploads.s3.amazonaws.com/52bc7a190a0e32ec4c000020/57bf2d1c6896977343f80535/output/87be589cc006a816411e8799ad3e67d9.original.mp4"
    type="video/mp4" />
  \"Your Browser Does Not Support Video\"
</video>
`;

exports[`rounded border`] = `
<video
  className=""
  controls={true}
  height={undefined}
  width={undefined}>
  <source
    src="https://buffer-media-uploads.s3.amazonaws.com/52bc7a190a0e32ec4c000020/57bf2d1c6896977343f80535/output/87be589cc006a816411e8799ad3e67d9.original.mp4"
    type="video/mp4" />
  \"Your Browser Does Not Support Video\"
</video>
`;
